fix: modal z-index bug - MUI fab show over modal, refine dismiss logic with tap on background, decouple and remove parent components' ref requirements

--- a/src/components/Common/SEModal.css
+++ b/src/components/Common/SEModal.css
@@ -1,3 +1,25 @@
+.popup-modal__background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    pointer-events:none;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1998;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.popup-modal__background.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.popup-modal.disappear {
+    opacity: 0;
+}
+
 .popup-modal {
     position: fixed;
     bottom: 0;
@@ -5,7 +27,7 @@
     transform: translateX(-50%);
     width: 100%;
     height: auto;
-    z-index: 1051; /* MUI Fab z-index + 1 */
+    z-index: 1998; /* MUI Fab z-index + 1 */
     display: block;
     /*overflow-y: auto;*/
     text-align: center;
@@ -59,43 +81,6 @@
     .popup-modal {
         width: 33.33%;
     }
-}
-
-.popup-modal__header {
-    padding: 5px;
-    text-align: center;
-    position: relative;
-    top: 5px;
-    left: 0;
-    right: 0;
-}
-
-.popup-modal__content {
-    padding: 5px;
-    text-align: center;
-    position: relative;
-    top: 5px;
-    left: 0;
-    right: 0;
-}
-
-.popup-modal__footer {
-    padding: 5px;
-    text-align: center;
-    position: absolute;
-    bottom: 5px;
-    left: 0;
-    right: 0;
-}
-
-.popup-modal__button {
-    padding: 8px 16px;
-    border: none;
-    background-color: #f44336;
-    color: #fff;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 4px;
 }
 
 @keyframes pop-up {
